--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -26,7 +26,7 @@
                         <h5 class="text-white fw-light">Meta Manager</h5>
                     </div>
                     <div>
-                        <button type="button">...</button>
+                        <button class="dots" type="button">...</button>
                     </div>
                 </div>
                 <div class="d-flex justify-content-between mb-3">
@@ -48,7 +48,7 @@
             <!-- right section  -->
             <div class="welcome p-3">
                 <div class="d-flex justify-content-end mb-2">
-                    <button type="button">...</button>
+                    <button class="dots" type="button">...</button>
                 </div>
 
                 <div class="mb-3">
@@ -213,8 +213,14 @@
             </div>
         </div>
 
-        <div class="top20  d-flex justify-content-center align-items-center p-3">
-            <app-bar-chart></app-bar-chart>
+        <div class="top20 p-3">
+            <div class="d-flex justify-content-center align-items-center ">
+                <img src="../../assets/images/bargraph.png" width="823" height="378" alt="">
+            </div>
+            <div class="d-flex justify-content-between">
+                <button class="chartnav prev" type="button"> << Previous</button>
+                <button class="chartnav next" type="button"> Next >> </button>
+            </div>
         </div>
     </div>
 
@@ -295,7 +301,7 @@
 
 
             <div class="d-flex justify-content-between">
-                <div class="d-flex rend p-2 m-2"  style="background-color: #F8FCFF;">
+                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
                     <div class="me-3 d-block m-auto">
                         <img src="../../assets/images/weapons/HijosFull 1.png" width="65" height="80" alt="">
                     </div>
@@ -312,8 +318,7 @@
                 </div>
                 <div class="d-flex rend p-2 m-2">
                     <div class="me-3 d-block m-auto">
-                        <img src="../../assets/images/weapons/NietosFull 1.png" width="65" height="80"
-                            alt="">
+                        <img src="../../assets/images/weapons/NietosFull 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Nietos Vendiedo</p>
@@ -328,8 +333,7 @@
                 </div>
                 <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
                     <div class="me-3 d-block m-auto">
-                        <img src="../../assets/images/weapons/BisNietosFull 1.png" width="65" height="80"
-                            alt="">
+                        <img src="../../assets/images/weapons/BisNietosFull 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Bisnietos Vendiedo</p>
@@ -351,7 +355,73 @@
     <!-- mi rendimento  -->
     <div class="p-3">
         <h4>Mi Rendimento</h4>
+        <div class="top20 p-3">
+            <div class="d-flex justify-content-between">
+                <table class="m-2 p-2">
+                    <tr class="s" style="background-color: #FDFDFD;">
+                        <th style="width:30%">Ano OC</th>
+                        <th style="width:30%">Fecha Incio</th>
+                        <th style="width:30%">Agente</th>
+                    </tr>
+                    <tr class="s" style="background-color: white">
+                        <td>2024</td>
+                        <td>Ultimate 30 Dias</td>
+                        <td>ANDREA YAMILIET
+                            RANGEL QUIROZ
+                        </td>
+                    </tr>
 
+
+                </table>
+                <div class="rend m-2 p-2">
+
+                </div>
+
+            </div>
+
+            <div>
+                <table class="m-2 p-2">
+                    <tr style="background-color: #FDFDFD;">
+                        <th style="width:80%">Fecha de Inicio</th>
+                        <th style="width:20%">40 Dias</th>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2023</td>
+                        <td>MX480.00</td>
+                    </tr>
+
+
+                </table>
+            </div>
+        </div>
     </div>
 
     <!-- Resultados por fecha -->
