--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -218,8 +218,9 @@
                 <img src="../../assets/images/bargraph.png" width="823" height="378" alt="">
             </div>
             <div class="d-flex justify-content-between">
-                <button class="chartnav prev" type="button"> << Previous</button>
-                <button class="chartnav next" type="button"> Next >> </button>
+                <button class="chartnav prev" type="button">
+                    << Previous</button>
+                        <button class="chartnav next" type="button"> Next >> </button>
             </div>
         </div>
     </div>
@@ -356,7 +357,9 @@
     <div class="p-3">
         <h4>Mi Rendimento</h4>
         <div class="top20 p-3">
-            <div class="d-flex justify-content-between">
+            <!-- top section  -->
+            <div class="d-flex">
+                <!-- table  -->
                 <table class="m-2 p-2">
                     <tr class="s" style="background-color: #FDFDFD;">
                         <th style="width:30%">Ano OC</th>
@@ -370,17 +373,25 @@
                             RANGEL QUIROZ
                         </td>
                     </tr>
-
-
                 </table>
-                <div class="rend m-2 p-2">
-
+                <!-- circle graph  -->
+                <div class="m-2 p-2 d-flex">
+                    <img src="../../assets/images/circle graph.png" width="121" height="121" class="me-3" alt="">
+                    <div>
+                        <p><span class="circlebadge me-3" style="background-color: #33b5ff; color: #33b5ff;">
+                                ....</span> Instaldo ultimos 30 Dias</p>
+                        <p class="h6"><span class="circlebadge me-3" style="background-color: #fff;"> </span>
+                            MX30,750,00</p>
+                        <p><span class="circlebadge me-3" style="background-color: #67E03D; color: #67E03D;">
+                                ....</span> Para desbloquear candado</p>
+                        <p class="h6"><span class="circlebadge me-3" style="background-color: #fff;"> </span> MX0.00</p>
+                    </div>
                 </div>
 
             </div>
 
-            <div>
-                <table class="m-2 p-2">
+            <div class="m-2 p-2 d-flex justify-content-between">
+                <table class="p-2 flex-grow-1 m-2">
                     <tr style="background-color: #FDFDFD;">
                         <th style="width:80%">Fecha de Inicio</th>
                         <th style="width:20%">40 Dias</th>
@@ -420,6 +431,7 @@
 
 
                 </table>
+                <img src="../../assets/images/bar2.png" width="600" height="" alt="">
             </div>
         </div>
     </div>
