mi perfil ready

--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -181,12 +181,12 @@
                 <h4>Top 20 MetaManagers</h4>
                 <p class="fs-6 greytext">Instalado 30 dias</p>
             </div>
-            <div class="">
-                <a href="#">See All</a>
+            <div class="d-flex align-items-center mb-3">
+                <a href="#" class="text-decoration-none">See All</a>
                 <img src="../../assets/images/icons/info.png" width="25" height="25" class="ms-3" alt="">
             </div>
         </div>
-        <div class="top20  d-flex justify-content-center align-items-center p-3">
+        <div class="top20 d-flex justify-content-center align-items-center p-3">
             <app-top-20-slider></app-top-20-slider>
         </div>
     </div>
@@ -199,7 +199,7 @@
                 <p class="fs-6 greytext">Instalado 30 dias</p>
             </div>
             <div>
-                <form>
+                <form >
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
                         <select class="form-select bg-white" disabled>
@@ -247,53 +247,53 @@
             </div>
         </div>
 
-        <div class="top20 p-3">
+        <div class="top20 p-2">
 
             <div class="d-flex justify-content-between">
-                <div class="d-flex rend p-2 m-2">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/My progress 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Candados Abiertos</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
-                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1" style="background-color: #F8FCFF;">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/Piramide-Consecutivos 1.png" width="65" height="80"
                             alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Candados Abiertos</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
-                <div class="d-flex rend p-2 m-2">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/replicate-prediction-zku5kqdbtj2f7fn5s23sdpqowe 1.png"
                             width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Candados Abiertos</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">MX16,322.23</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
@@ -302,48 +302,48 @@
 
 
             <div class="d-flex justify-content-between">
-                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1" style="background-color: #F8FCFF;">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/HijosFull 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2 ">
                         <p class="h6">Hijos Vendiendo</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">2</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">2</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">5</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">5</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
-                <div class="d-flex rend p-2 m-2">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/NietosFull 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Nietos Vendiedo</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">4</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">4</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">6</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">6</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
-                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
-                    <div class="me-3 d-block m-auto">
+                <div class="d-flex rend p-2 m-1" style="background-color: #F8FCFF;">
+                    <div class="me-1 d-block m-auto">
                         <img src="../../assets/images/weapons/BisNietosFull 1.png" width="65" height="80" alt="">
                     </div>
                     <div class="border-end ms-2">
                         <p class="h6">Bisnietos Vendiedo</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">4</p>
+                        <p class="fw-bold fs-6" style="color: #E0B244">4</p>
                         <p class="fs-6 greytext">Semana: 3</p>
                     </div>
                     <div class="ms-2">
                         <p class="h6">Mamixmo Historico</p>
-                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">14</p>
+                        <p class="fw-bold fs-6" style="color: #A0DB1A">14</p>
                         <p class="fs-6 greytext">Semana: 1</p>
                     </div>
                 </div>
@@ -438,12 +438,12 @@
 
     <!-- Resultados por fecha -->
     <div class="p-3">
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between align-items-baseline">
             <div>
-                <h4>Mi Progreso</h4>
-                <p class="fs-6 greytext">Instalado 30 dias</p>
+                <h4>Resultados por fecha</h4>
             </div>
-            <div>
+            <div class="d-flex mb-2">
+                <p class="fs-5 greytext">Rangos por fechas: </p>
                 <form>
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
@@ -454,12 +454,95 @@
                         </select>
                     </div>
                 </form>
-
+                <form>
+                    <div class="input-group">
+                        <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
+                        <select class="form-select bg-white" disabled>
+                            <option>semana 3</option>
+                            <option>Semana 4</option>
+                            <option>Semana 5</option>
+                        </select>
+                    </div>
+                </form>
+                <form>
+                    <div class="input-group">
+                        <button class=" searchbutton input-group-text" type="button"> <i class="bi bi-search"></i>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
 
         <div class="top20  d-flex justify-content-center align-items-center p-3">
-            <app-bar-chart></app-bar-chart>
+            <div class="col-6 p-3">
+                <div class="d-flex mb-2">
+                    <div class="b1 me-2 p-3 col-6">
+                        <p class="fs-5">Vendido</p>
+                        <h2 style="color: #57B847;">MX5,880.00</h2>
+                    </div>
+                    <div class="b2 me-2 p-3 col-6">
+                        <p class="fs-5">Instalado</p>
+                        <h2 style="color: #47B1B8;">MX5,880.00</h2>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="b3 me-2 p-3 col-6">
+                        <p class="fs-5">Canceloado</p>
+                        <h2 style="color: #CA5D53;">MX1,770.00</h2>
+                    </div>
+                    <div class="b4 me-2 p-3 col-6">
+                        <p class="fs-5">Abierto</p>
+                        <h2 style="color: #CA5EA9;">MX0.00</h2>
+                    </div>
+                </div>
+                <div class="rend col-12 mt-2 p-3">
+                    <div class="mb-3">
+                        <h5>Promedio de instalado</h5>
+                        <p class="fs-5 greytext line">(ultimos 90 dias)</p>
+                        <div class="d-flex justify-content-end">
+                            <p class="fs-6" style="color:#33b5ff">$1163</p>
+                        </div>
+                        <div class="progress" style="height: 9px">
+                            <div class="progress-bar rounded" style="width:0%; color:#33b5ff"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rend col-6 p-3">
+                <div class="mb-3">
+                    <h5>Distribtion de instaladas</h5>
+                    <p class="fs-5 greytext line">(ultimos 90 dias)</p>
+                    <div class="d-flex justify-content-between">
+                        <p class=" fs-6">1RGU</p>
+                        <p class="fs-6" style="color:#33b5ff">0.00%</p>
+                    </div>
+                    <div class="progress" style="height: 9px">
+                        <div class="progress-bar rounded" style="width:0%; color:#33b5ff"></div>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <div class="d-flex justify-content-between">
+                        <p class="fs-6">2RGU</p>
+                        <p class="fs-6" style="color:#8B34B4">50.00%</p>
+                    </div>
+                    <div class="progress" style="height: 9px">
+                        <div class="progress-bar rounded" style="width:50%; background-color:#8B34B4"></div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="d-flex justify-content-between">
+                        <p class="text-white fs-6">Vendido Semanal $7080</p>
+                        <p class="fs-6 line" style="color:#722D2E">50.00%</p>
+                    </div>
+                    <div>
+                        <div class="progress" style="height: 9px">
+                            <div class="progress-bar rounded" style="width:76%; background-color:#722D2E"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
