--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -19,63 +19,69 @@ p {
     font-size: 4px;
   }
 
-  .switch {
+ 
+
+   /* The switch - the container */
+   .switch {
     position: relative;
     display: inline-block;
     width: 50px;
     height: 20px;
-    border-radius: 40%;
-    background-color: black;
-  }
-  
-  .switch input { 
+}
+
+/* Hide the default checkbox */
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-  .slider {
+}
+
+/* The slider (round) */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url(../../assets/images/icons/Frame\ 73.png);
+    background-color: #DAE4EA;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+    border-radius: 34px;
+}
+
+.slider:before {
     position: absolute;
     content: "";
-    height: 16px;
-    width: 16px;
+    height: 20px;
+    width: 20px;
     left: 4px;
     bottom: 4px;
+    background-image: url(../../assets/images/icons/Frame\ 73.png);;
     -webkit-transition: .4s;
     transition: .4s;
-  }
   
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
+}
+
+input:checked + .slider {
+    background-color: #DAE4EA;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #DAE4EA;
+}
+
+input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
+}
+
+/* Rounded sliders */
+.slider.round {
     border-radius: 34px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
+}
