--- a/src/app/miperfile/miperfile.component.css
+++ b/src/app/miperfile/miperfile.component.css
@@ -134,3 +134,32 @@ tr:nth-child(even) {
         font-size: 10px;
     
 }
+
+.searchbutton {
+    background-image: linear-gradient(rgba(139, 214, 255, 1), rgba(53, 183, 255, 1));
+    border: none;
+    color: white;
+    border-radius: 0  20% 20% 0;
+    
+
+}
+
+.b1 {
+    border-radius: 12px;
+    background-image: linear-gradient(rgba(236, 255, 233, 1), rgba(213, 239, 209, 1));
+}
+
+.b2 {
+    border-radius: 12px;
+    background-image: linear-gradient(rgba(233, 255, 251, 1), rgba(209, 241, 243, 1));
+}
+
+.b3 {
+    border-radius: 12px;
+    background-image: linear-gradient(rgba(255, 234, 233, 1), rgba(245, 219, 217, 1));
+}
+
+.b4 {
+    border-radius: 12px;
+    background-image: linear-gradient(rgba(251, 227, 244, 1), rgba(241, 210, 233, 1));
+}
