--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -8,12 +8,17 @@ height: 120;
     height: 200%;
 }
 
-li a:hover, li a.active {
+li a:hover, li a:active {
     background-image: linear-gradient(to right, rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
 }
 
+.searchbox {
+    background-color: rgba(255, 255, 255, 0.6);
+    border: none;
+    border-radius: 50px 0px 0px 50px;
+}
 .search{
-border-radius: 50px;
+border-radius: 0px 50px 50px 0px;
 background-color: rgba(255, 255, 255, 0.6);
 
 }
