captura de venta ready

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
     <ul class="nav nav-pills p-3 flex-column mb-auto">
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="">
+            <a class="nav-link text-white active" routerLink="">
                 <img src="../../assets/images/icons/Vector.png" width="20" height="20" class="me-2" alt="user icon">Mi
                 Perfile
             </a>
@@ -30,7 +30,7 @@
 
         <!-- Layout builder -->
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/builder">
+            <a class="nav-link text-white" routerLink="capturadeventa">
                 <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2"
                     alt="user icon">Captura Venta
             </a>
