--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -5,10 +5,10 @@ height: 120;
 
 .bar {
     background-image: url(../../assets/images/backgrounds/Frame\ 16\ \(1\).png);
-    height: 200%;
+    height: 100%;
 }
 
-li a:hover, li a:active {
+li a:hover, .nav-pills .nav-link.active {
     background-image: linear-gradient(to right, rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
 }
 
