agregar hijos ready

--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -360,7 +360,7 @@
             <!-- top section  -->
             <div class="d-flex">
                 <!-- table  -->
-                <table class="m-2 p-2">
+                <table class=" table m-2 p-2">
                     <tr class="s" style="background-color: #FDFDFD;">
                         <th style="width:30%">Ano OC</th>
                         <th style="width:30%">Fecha Incio</th>
@@ -391,7 +391,7 @@
             </div>
 
             <div class="m-2 p-2 d-flex justify-content-between">
-                <table class="p-2 flex-grow-1 m-2">
+                <table class="table p-2 flex-grow-1 m-2">
                     <tr style="background-color: #FDFDFD;">
                         <th style="width:80%">Fecha de Inicio</th>
                         <th style="width:20%">40 Dias</th>
