--- a/src/app/captura-de-venta/captura-de-venta.component.html
+++ b/src/app/captura-de-venta/captura-de-venta.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex border-bottom p-3 align-items-baseline">
+<div class=" container-fluid d-flex border-bottom p-3 align-items-baseline">
     <h2>Capture de venta</h2>
 </div>
 
-<div class="main p-3">
+<div class="main p-3 container-fluid">
     <form action="">
         <div class="m-3">
 
