--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
     <ul class="nav nav-pills p-3 flex-column mb-auto">
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link text-white active" routerLink="">
+            <a class="nav-link text-white" routerLink="">
                 <img src="../../assets/images/icons/Vector.png" width="20" height="20" class="me-2" alt="user icon">Mi
                 Perfile
             </a>
@@ -58,23 +58,23 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="miDiagrama" routerLinkActive="active">
                 <img src="../../assets/images/icons/Vector (3).png" width="16" height="16" class="me-2"
                     alt="user icon">Mi Diagrama
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="misPaginas" routerLinkActive="active">
                 <img src="../../assets/images/icons/flag.png" width="16" height="16" class="me-2" alt="user icon">Mi
                 Paginas
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="agregarHijos" routerLinkActive="active">
                 <img src="../../assets/images/icons/Group 2.png" width="16" height="16" class="me-2"
-                    alt="user icon">Agrigar Hijos
+                    alt="user icon">Agregar Hijos
             </a>
         </li>
 
